quorum/test/tests/other/Fail/ReassignConstantTemplatedType.quorum
/*
Expected output: should not compile
*/

use Libraries.Containers.List
use Libraries.Containers.Stack
use Libraries.Containers.Queue
use Libraries.Containers.Array

class Main
    constant Stack<number> s
    private constant List<text> l
    public constant Queue<boolean> q 

    on create
        s = undefined
    end

    action Main
        l = undefined
        q = undefined
        constant Array<Array<text>> aa
        Array<Array<text>> aa2
        aa = aa2
        aa = undefined
    end
end